examples/type_system/failing/08_compile_identifier_type_mismatch.flx
// parity-expected-stdout-begin
// parity-expected-stdout-end
// expect: compile_error

let value = "oops"
let n: Int = value
